; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/wordpad/extr_print.c_registry_read_pagemargins.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/wordpad/extr_print.c_registry_read_pagemargins.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@var_pagemargin = common dso_local global i32 0, align 4
@margins = common dso_local global i32 0, align 4
@ERROR_SUCCESS = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @registry_read_pagemargins(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  store i32 4, i32* %3, align 4
  %4 = load i32, i32* %2, align 4
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %6, label %16

6:                                                ; preds = %1
  %7 = load i32, i32* %2, align 4
  %8 = load i32, i32* @var_pagemargin, align 4
  %9 = call i64 @RegQueryValueExW(i32 %7, i32 %8, i32 0, i32* null, i32 ptrtoint (i32* @margins to i32), i32* %3)
  %10 = load i64, i64* @ERROR_SUCCESS, align 8
  %11 = icmp ne i64 %9, %10
  br i1 %11, label %16, label %12

12:                                               ; preds = %6
  %13 = load i32, i32* %3, align 4
  %14 = sext i32 %13 to i64
  %15 = icmp ne i64 %14, 4
  br i1 %15, label %16, label %18

16:                                               ; preds = %12, %6, %1
  %17 = call i32 @SetRect(i32* @margins, i32 1757, i32 1417, i32 1757, i32 1417)
  br label %18

18:                                               ; preds = %16, %12
  ret void
}

declare dso_local i64 @RegQueryValueExW(i32, i32, i32, i32*, i32, i32*) #1

declare dso_local i32 @SetRect(i32*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
